<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TigerGeolocMedia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Bienvenue dans l\'application \nTigerGeolocMedia) By G</string>
    <string name="record">Record</string>
    <string name="stopRecord">Stop Record</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="takePicture">Image</string>
    <string name="takeMovie">Video</string>
    <string name="takeSound">Son</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_historic">HistoricActivity</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="picture_description">Contient la photo qu\'on vient de prendre</string>
    <string name="description_hint">Description</string>
    <string name="title_activity_sound">SoundActivity</string>
    <string name="menu_save_picture">Sauver</string>
    <string name="menu_save_picture_condensed">SA</string>
    <string name="menu_send_picture">Envoyer</string>
    <string name="menu_send_picture_condensed">ENV</string>
    <string name="menu_cancel_picture">Annuler</string>
    <string name="menu_cancel_picture_condensed">ANN</string>
    <string name="menu_save_movie">Sauver</string>
    <string name="menu_save_movie_condensed">SA</string>
    <string name="menu_send_movie">Envoyer</string>
    <string name="menu_send_movie_condensed">ENV</string>
    <string name="menu_cancel_movie">Annuler</string>
    <string name="menu_cancel_movie_condensed">ANN</string>
    <string name="save">Sauver</string>
    <string name="send">Envoyer</string>
    <string name="cancel">Annuler</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_historic_bdd">HistoricBDDActivity</string>
    <string name="type_adapter">Type : </string>
    <string name="loading_adapter">Chargement Fini</string>
    <string name="error_adapter">Une Erreur s\'est produite lors du chargement</string>
    <string name="youClickedOn">Vous avez clique sur </string>
    <string name="getUserButton">Get Users List</string>
    <string name="title_activity_picture_activity_read_only">PictureActivityReadOnly</string>
    <string name="title_activity_video_view_activity_read_only">VideoViewActivityReadOnly</string>
    <string name="title_activity_show_list_users">ShowListUsersActivity</string>
    
    <string-array name="items">
        <item>Capturer un media</item>
        <item>les médias autour de moi</item>
        <item>les medias de ceux que je suis</item>
        <item>mon compte</item>
        <item>Historique</item>
        <item>Map</item>
        <item>Users List</item>
        <item>Historique avec BDD</item>
    </string-array>
    
</resources>

