<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tigergeolocmedia.PictureActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" android:visible="false"/>
    <item android:id="@+id/itemSave" android:showAsAction="always" android:titleCondensed="@string/menu_save_picture_condensed" android:title="@string/menu_save_picture"></item>
    <item android:id="@+id/itemSaveAndSend" android:showAsAction="always" android:titleCondensed="@string/menu_send_picture_condensed" android:title="@string/menu_send_picture"></item>
    <item android:id="@+id/itemCancel" android:showAsAction="always" android:titleCondensed="@string/menu_cancel_picture_condensed" android:title="@string/menu_cancel_picture"></item>

</menu>
