<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tigergeolocmedia.SoundActivity" >

    <EditText
        android:id="@+id/soundDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recordButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/soundDescription"
        android:layout_below="@+id/recordButton"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="51dp"
        android:text="@string/description_hint" />

    <Button
        android:id="@+id/playSoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/recordButton"
        android:layout_alignBottom="@+id/recordButton"
        android:layout_alignRight="@+id/soundDescription"
        android:layout_marginRight="47dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="71dp"
        android:text="@string/record" />

</RelativeLayout>
